# timbrine

./: CMakeLists.txt  README.md  build.sh
include/: audio.hpp  effects.hpp  globals.hpp  ui.hpp
qml/: MainView.qml
src/: audio.cpp  effects.cpp  ui.cpp
